language/move-lang/tests/move_check/borrows/borrow_field_field_invalid.exp
error: 

    ┌── tests/move_check/borrows/borrow_field_field_invalid.move:13:17 ───
    │
 13 │         let c = &mut inner.f1;
    │                 ------------- Field 'f1' is still being mutably borrowed by this reference
 14 │         let f1 = &inner.f1;
    │                  ^^^^^^^^^ Invalid immutable borrow at field 'f1'.
    │

error: 

    ┌── tests/move_check/borrows/borrow_field_field_invalid.move:20:17 ───
    │
 20 │         let c = id_mut(&mut inner.f1);
    │                 --------------------- Field 'f1' is still being mutably borrowed by this reference
 21 │         let f1 = &inner.f1;
    │                  ^^^^^^^^^ Invalid immutable borrow at field 'f1'.
    │

